nº 7 (small fixes)

--- a/index.html
+++ b/index.html
@@ -164,61 +164,40 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 text-center mx-auto">
-                    <h2 class="section-title">Soluções para sua empresa:</h2>
+                    <h2 class="section-title">Áreas de Atuação</h2>
                     <p>Conheça nossos serviços e surpreenda-se nos resultados.</p>
                 </div>
             </div>
+            <br/>
+            <br/>
             <div class="row">
-                <div class="col-md-4 feature wow" data-wow-duration=".5s" data-wow-delay=".2s">
-                    <div class="feature-icon">
-                        <i data-vi="processor" data-vi-primary="#cfecff" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
-                    </div>
-                    <h4>BKPS DF-e</h4>
-                    <p>Base de DF-e (Documentos Fiscais Eletrônicos), com validade jurídica e eventos de correção, cancelamento e manifestação monitorados.</p>
-                </div>
-                <div class="col-md-4 feature wow" data-wow-duration=".5s" data-wow-delay=".4s">
+                <div class="col-md-4">
                     <div class="feature-icon">
                         <i data-vi="newspaper" data-vi-primary="#60b6f4" data-vi-accent="#cfecff" data-vi-prop="#CEFAFF"></i>
+                        <h4>Diagnóstico e Recuperação Tributária</h4>
+                        <br/>
+                        <p>Base de DF-e (Documentos Fiscais Eletrônicos), com validade jurídica e eventos de correção, cancelamento e manifestação monitorados.</p>
+                        <a class="btn btn-block btn-secondary" href="diagnostico-e-recuperacao-tributaria.html">Saiba Mais</a>
                     </div>
-                    <h4>BKPS ICMS</h4>
-                    <p>Ressarcimento, Complemento e Crédito de ICMS nas operações próprias e na condição de Substituto Tributário.</p>
                 </div>
-                <div class="col-md-4 feature wow" data-wow-duration=".5s" data-wow-delay=".6s">
+                <div class="col-md-4">
+                    <div class="feature-icon">
+                        <i data-vi="processor" data-vi-primary="#cfecff" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
+                        <h4>Soluções Fiscais Tecnológicas e Avançadas</h4>
+                        <br/>
+                        <p>Ressarcimento, Complemento e Crédito de ICMS nas operações próprias e na condição de Substituto Tributário.</p>
+                        <br/>
+                        <a class="btn btn-block btn-secondary" href="platform.html">Saiba Mais</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
                     <div class="feature-icon">
                         <i data-vi="controller" data-vi-primary="#60b6f4" data-vi-accent="#cfecff" data-vi-prop="#CEFAFF"></i>
-                    </div>
-                    <h4>BKPS Message</h4>
-                    <p>Monitoramento de notificações oficiais da administração pública Federal, Estadual e Municipal recebidas através do Domicílio tributário Eletrônico.</p>
-                </div>
-                <div class="col-md-4 feature wow" data-wow-duration=".5s" data-wow-delay=".8s">
-                    <div class="feature-icon">
-                        <i data-vi="doc" data-vi-primary="#60b6f4" data-vi-accent="#cfecff" data-vi-prop="#CEFAFF"></i>
-                    </div>
-                    <h4>BKPS PERDCOMP</h4>
-                    <p>Monitoramento de Pedido Eletrônico de Restituição, Ressarcimento ou Reembolso e Declaração de Compensação.</p>
-                </div>
-                <div class="col-md-4 feature wow" data-wow-duration=".5s" data-wow-delay="1s">
-                    <div class="feature-icon">
-                        <i data-vi="user" data-vi-primary="#cfecff" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
-                    </div>
-                    <h4>BKPS Analytics</h4>
-                    <p>Relatórios avançados de análise tributária de obrigações acessórias com o olhar especialista da BKPS.</p>
-                </div>
-                <div class="col-md-4 feature wow" data-wow-duration=".5s" data-wow-delay="1.2s">
-                    <div class="feature-icon">
-                        <i data-vi="cloud" data-vi-primary="#60b6f4" data-vi-accent="#60b6f4" data-vi-prop="#CEFAFF"></i>
-                    </div>
-                    <h4>BKPS PIS/COFINS</h4>
-                    <p>Relatórios avançados de análise tributária de obrigações acessórias com o olhar especialista da BKPS.</p>
-                </div>
-                <div class="mx-auto text-center">
-                    <br/>
-                    <div class="caption text-nowrap">
+                        <h4>Inovação Tecnológica e Incentivos</h4>
                         <br/>
-                        <h3>Tudo em um único lugar!</h3>
-                        <br/>
+                        <p>Monitoramento de notificações oficiais da administração pública Federal, Estadual e Municipal recebidas através do Domicílio tributário Eletrônico.</p>
+                        <a class="btn btn-block btn-secondary" href="inovacao-tecnologica-e-incentivos.html">Saiba Mais</a>
                     </div>
-                    <a class="btn btn-block btn-secondary" href="platform.html">Conheça a BKPS Platform!</a>
                 </div>
             </div>
         </div>
